@@ -1,3 +1,7 @@
+1998-05-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* Makefile.am (ice9_sources): Add emacs.scm.
+
 1998-05-13  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* readline.scm: Use the new readline facilities: Add the
